objects/ccrz__E_ProductGuide__c.object
<CustomObject>
    <fields>
        <fullName>ccrz__DisplayType__c</fullName>
        <description>Drives the display of this guide in the UI</description>
        <label>Display Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single-Select</fullName>
                </value>
                <value>
                    <fullName>Single-Select Quantity</fullName>
                </value>
                <value>
                    <fullName>Multi-Select</fullName>
                </value>
                <value>
                    <fullName>Multi-Select Quantity</fullName>
                </value>
                <value>
                    <fullName>Image-Select</fullName>
                </value>
                <value>
                    <fullName>Image-Select Quantity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__ProductGuideId__c</fullName>
        <externalId>true</externalId>
        <label>ProductGuideId</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__Product__c</fullName>
        <description>The product this guide belongs to.</description>
        <label>Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>CC Product Guides</relationshipLabel>
        <relationshipName>E_ProductGuides</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__RelatedProductGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Product Group</label>
        <referenceTo>ccrz__E_RelatedProductGroup__c</referenceTo>
        <relationshipLabel>CC Product Guides</relationshipLabel>
        <relationshipName>E_ProductGuides</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether or not a selection within this guide is required.</description>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__Sequence__c</fullName>
        <defaultValue>500</defaultValue>
        <description>Ordering of the guide sections</description>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CC Product Guide</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>ccrz__Product__c</columns>
        <columns>ccrz__RelatedProductGroup__c</columns>
        <columns>ccrz__DisplayType__c</columns>
        <columns>ccrz__Required__c</columns>
        <columns>ccrz__Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Product Guide Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Product Guides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>